--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,8 @@
 [project]
-name = "armory-lib"
+name = "armory-lib" 
 version = "0.1.0"
+
+requires-python = ">=3.11"
 
 dependencies = [
     "bitcoinlib",
@@ -12,7 +14,19 @@ dependencies = [
     "fire",
 ]
 
-[project.optional-dependencies]
+[dependency-groups]
 dev = [
-  "pytest",
+    "pyright>=1.1.408",
+    "pytest>=9.0.2",
+    "ruff>=0.14.13",
 ]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/armory_lib"]
+
+[tool.ruff]
+line-length = 79
