Skip Windows with Python 3.13 in CI

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ classifiers = [
 ]
 
 dependencies = [
-    "bitcoinlib",
+    "bitcoinlib>=0.7.6",
     "cryptography",
     "loguru",
     "polars>1",
