--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -18,6 +18,10 @@ jobs:
       matrix:
         os: ["ubuntu-latest", "macos-latest", "windows-latest"]
         python-version: ["3.11", "3.12", "3.13"]
+        exclude:
+          # Skip Windows with Python 3.13 as it currently crashes.
+          - os: windows-latest
+            python-version: "3.13"
 
     runs-on: ${{ matrix.os }}
     timeout-minutes: 10
