--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "armory-lib" 
-version = "0.1.0"
+version = "0.1.1"
 
 requires-python = ">=3.11"
 
@@ -9,6 +9,7 @@ authors = [
 ]
 description = "Python library and tools for recovering Armory Bitcoin Wallets"
 readme = "README.md"
+license = "BSD-3-Clause"
 
 classifiers = [
     "Programming Language :: Python :: 3",
